# md-to-tts

./: .gitignore  Dockerfile  README.md  project.toml  pyproject.toml
src/md_tts/: __init__.py  audio_utils.py  cli.py  parser.py  tts.py
